--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label for="monthSelect">📊 シート選択</label>
+                        <select id="monthSelect">
+                            <option value="chainstream">Chain Stream（チェンスト）</option>
+                            <option value="asc">AI Sound Cypher（ASC）</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="spreadsheetUrl">📊 スプレッドシートURL</label>
                         <input type="text" id="spreadsheetUrl"
                             placeholder="https://docs.google.com/spreadsheets/d/xxxxx/edit?gid=xxxxx">
