--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>AI音楽 Post Generator v1.1 | ラジオ川越</p>
+            <p>AI音楽 Post Generator v1.2 (2025.01.29 Updated) | ラジオ川越</p>
         </footer>
     </div>
 
